<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="40dp"
        android:gravity="right"
        android:orientation="vertical"
        tools:context=".NewEvent">

        <TextView
            android:id="@+id/lblTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/lblAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="18dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/txtAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/lblPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="18dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:text="Next"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="BACK"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnDeleteEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DELETE"
            android:visibility="invisible" />

    </LinearLayout>
</ScrollView>
